@@ -1,5 +1,13 @@
 2001-04-11  Martin Baulig  <baulig@suse.de>
 
+	* gnome-config.c (access_config_extended): Use
+	gnome_program_locate_file() instead of gnome_config_file().
+
+	* gnome-fileconvert.c (gfc_read_FileConverters): Use
+	gnome_program_locate_file().
+
+2001-04-11  Martin Baulig  <baulig@suse.de>
+
 	* gnome-program.c (gnome_program_locate_file): Return NULL if
 	`ret_locations' is given.
 
